src/objects/Patent_Baseline__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <formula>TEXT(Baseline__r.Approval_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Baseline_Implementation__c</fullName>
        <formula>Baseline__r.Implementation_Baseline_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Baseline Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Baseline_Status__c</fullName>
        <formula>TEXT(Baseline__r.Baseline_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Baseline Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Baseline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Baseline</label>
        <referenceTo>Baseline__c</referenceTo>
        <relationshipLabel>Patent Baselines</relationshipLabel>
        <relationshipName>Patent_Baselines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Actual_Date__c</fullName>
        <formula>Baseline__r.Implementation_Actual_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_CWV_Date__c</fullName>
        <formula>Baseline__r.Implementation_CWV_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation CWV Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Case</label>
        <referenceTo>Legal_Case__c</referenceTo>
        <relationshipLabel>Patent Baselines</relationshipLabel>
        <relationshipName>Patent_Baselines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Baseline_Name__c</fullName>
        <formula>Baseline__r.Original_Baseline_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Baseline Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patent</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Patent__c.Legal_Case__c</field>
                <operation>equals</operation>
                <valueField>$Source.Legal_Case__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Patent__c</referenceTo>
        <relationshipLabel>Patent Baselines</relationshipLabel>
        <relationshipName>Patent_Baselines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Workaround__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workaround</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only patent device records with record type Workaround are allowed</errorMessage>
            <filterItems>
                <field>Patent_Device__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Workaround</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Patent_Device__c</referenceTo>
        <relationshipLabel>Patent Baselines</relationshipLabel>
        <relationshipName>Patent_Baselines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Patent Baseline</label>
    <nameField>
        <displayFormat>PB-{00000}</displayFormat>
        <label>Patent Baseline Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patent Baselines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>